[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/GovernmentSprites/DrillGrounds.png" type="Texture" id=1]
[ext_resource path="res://Fonts/Timeless.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/UI/Government/Infrastructure.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Timeless-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.243137, 0.262745, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.384314, 0.419608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[node name="Infrastructure" type="VBoxContainer"]
margin_right = 100.0
margin_bottom = 135.0
rect_min_size = Vector2( 100, 135 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenInfoPanel" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 1
flat = true

[node name="Sprite" type="Sprite" parent="OpenInfoPanel"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false

[node name="NamePanel" type="Control" parent="."]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 104.0
mouse_filter = 2

[node name="Node2D" type="Node2D" parent="NamePanel"]
z_index = 1

[node name="NameBackground" type="Panel" parent="NamePanel/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -12.0
margin_right = 102.0
margin_bottom = 33.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NamePanel/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -12.0
margin_right = 102.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Drill Grounds"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="NamePanel/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = -88.0
margin_right = 97.0
margin_bottom = -63.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="NamePanel/Node2D/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 4 )
text = "20"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeTimer" type="Timer" parent="."]
[connection signal="timeout" from="UpgradeTimer" to="." method="_on_UpgradeTimer_timeout"]
